# discoverycoinwallet

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake
